# ADBSat (Aerodynamic Database for Satellites)
All notable changes to this project will be documented in this file.

Always keep a [Unreleased] section at the top for tracking changes

## [Unreleased (F. Turco)]
### Changed
- Year in environment function no longer fixed but changeable via input --> changes in ADBSATFcn and examples to accunt for that
- axlength in plot_surfq_LVLH enlarged
### Added
- Functions ADBSATFcn_euler and calc_coeff_euler which consider attitude input as yaw, pitch, and roll angle (F. Turco)
- Function plotsurfq_LVLH which plots in LVLH system, considering yaw, pitch, and roll angle of satellite (F. Turco)
- Outputs Cf_b, Cf_LVLH, and C_D to calc_coeff_eulerAngles
- Plot of v_rel to plot_surfq_LVLH
### Removed
### Fixed

## [Unreleased]
### Changed
- File input and output structure changed to use user defined directories
### Added
- Diffuse Reemission, Incomplete Accommodation (DRIA) GSI model
- Functionality to allow shadowed panels to be plotted onto model surface
### Removed
- meshlabserver command line STL to OBJ functionality depreciated in recent updates 
### Fixed
- Units of AoA and AoS in example scripts

## [3.0] - 2020-07-22
### Changed
- Input to GSI models changed to structure (identical input format)
- Input parameters saved with output files
- Removed all use of eval
- Changes to naming conventions for output files 
### Added
- Automated stl2obj conversion using meshlabserver included
- CLL model now supported
### Removed
### Fixed
- Slight changes to shadow analysis function

## [2.1] - 2018-11-01
### Changed
- Substructures created for .aero and .solar in merged database output
- Logic changed for processing GSI model inputs in ADBSatFcn.m
### Added
### Removed
### Fixed

## [2.0] - 2018-10-15
### Added
- Different surface/material characteristics in GSIM calculation
- Solar radiation pressure coefficients
### Changed
- Absolute path references are now dyanmically allocated based on /install/ADBsat_dynpath function
