@@ -7,6 +7,7 @@ Always keep a [Unreleased] section at the top for tracking changes
 ### Changed
 - Year in environment function no longer fixed but changeable via input --> changes in ADBSATFcn and examples to accunt for that
 - axlength in plot_surfq_LVLH enlarged
+- mergeAEDB: corrected variable names (Aref, Lref
 ### Added
 - Functions ADBSATFcn_euler and calc_coeff_euler which consider attitude input as yaw, pitch, and roll angle (F. Turco)
 - Function plotsurfq_LVLH which plots in LVLH system, considering yaw, pitch, and roll angle of satellite (F. Turco)
